--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "discord-api-types": "^0.26.1",
     "discord.js": "^13.6.0",
     "dotenv": "^14.3.2",
-    "glob": "^7.2.0"
+    "glob": "^7.2.0",
+    "mongoose": "^6.1.8"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
