--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "discord.js": "^13.6.0",
     "dotenv": "^14.3.2",
     "glob": "^7.2.0",
-    "mongoose": "^6.1.8"
+    "mongoose": "^6.1.8",
+    "snekfetch": "^4.0.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
