--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^14.3.2",
     "glob": "^7.2.0",
     "mongoose": "^6.1.8",
+    "random-reddit": "^2.0.1",
     "snekfetch": "^4.0.4"
   },
   "devDependencies": {
