--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "discord.js": "^13.6.0",
     "dotenv": "^14.3.2",
     "glob": "^7.2.0",
+    "moment": "^2.29.1",
     "mongoose": "^6.1.8",
     "random-reddit": "^2.0.1",
     "snekfetch": "^4.0.4"
