--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@discordjs/builders": "^0.12.0",
     "@discordjs/rest": "^0.3.0",
+    "axios": "^0.26.0",
     "common-tags": "^1.8.2",
     "consola": "^2.15.3",
     "discord-api-types": "^0.26.1",
@@ -17,9 +18,7 @@
     "dotenv": "^14.3.2",
     "glob": "^7.2.0",
     "moment": "^2.29.1",
-    "mongoose": "^6.1.8",
-    "random-reddit": "^2.0.1",
-    "snekfetch": "^4.0.4"
+    "mongoose": "^6.1.8"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
