--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
     "common-tags": "^1.8.2",
     "consola": "^2.15.3",
     "discord-api-types": "^0.26.1",
+    "discord-together": "^1.3.3",
     "discord.js": "^13.6.0",
     "dotenv": "^14.3.2",
     "glob": "^7.2.0",
+    "memer-api": "^4.0.1",
+    "moment": "^2.29.1",
     "mongoose": "^6.1.8",
     "random-reddit": "^2.0.1",
+    "request": "^2.88.2",
     "snekfetch": "^4.0.4"
   },
   "devDependencies": {
